--- a/src/component/Homepage.css
+++ b/src/component/Homepage.css
@@ -134,7 +134,7 @@
     font-size:12px;
 }
 .box2_sub2{
-    border:1px solid blue;
+    /* border:1px solid blue; */
     width:50%;
     margin-top:3px;
     background-color: white;
