--- a/src/component/Schedule.css
+++ b/src/component/Schedule.css
@@ -1,7 +1,7 @@
 .container_schedule{
     width:1200px;
     margin: auto;
-    border:1px solid red; 
+    /* border:1px solid red;  */
 }
 
 .current_matches{
