--- a/src/component/Teams.css
+++ b/src/component/Teams.css
@@ -1,7 +1,7 @@
 .container_teams{
     width:1200px;
     margin:auto;
-    border:1px solid red;
+    /* border:1px solid red; */
 }
 .teams_sub{
     width:100%;
