--- a/src/component/Series.css
+++ b/src/component/Series.css
@@ -43,7 +43,7 @@
 .schedule_div{
     width:100%;
     height:40px;
-    border:1px solid red
+    /* border:1px solid red */
 }
 .schedule_div>h2{
     margin-left:22px;
